test/lambda/negative/runtime/division_by_zero.ls
// @expect-error: E302
// @description: Division by zero

let x = 10 / 0
